@@ -1,3 +1,7 @@
+2010-11-28  Steffen Gebert  <steffen@steffen-gebert.de>
+
+	* Follow-up to #15644: Replace magic numbers for shortcut_mode with class constants in tslib_fe
+
 2010-11-28  Steffen Ritter  <typo3@steffen-ritter.net>
 
 	* Fixed bug #16342: TCA tree throws Fatal error on displaying deleted records
